@@ -13,6 +13,7 @@ import UMC_7th.Closit.domain.user.entity.User;
 import UMC_7th.Closit.domain.user.repository.UserRepository;
 import UMC_7th.Closit.global.apiPayload.code.status.ErrorStatus;
 import UMC_7th.Closit.global.apiPayload.exception.GeneralException;
+import UMC_7th.Closit.security.SecurityUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -31,18 +32,18 @@ public class PostCommandServiceImpl implements PostCommandService {
     private final HashTagRepository hashtagRepository;
     private final PostHashTagRepository postHashtagRepository;
     private final ItemTagRepository itemTagRepository;
-    private final UserRepository userRepository;
+    private final SecurityUtil securityUtil;
 
     @Override
     public Post createPost(PostRequestDTO.CreatePostDTO request) {
         // 1. User 조회
-        User user = userRepository.findById(request.getUserId())
-                .orElseThrow(() -> new GeneralException(ErrorStatus._NOT_FOUND));
+
+        User currentUser = securityUtil.getCurrentUser();
 
         // 2. 사용자가 오늘 작성한 게시글이 있는지 확인
         LocalDateTime startOfDay = LocalDateTime.now().toLocalDate().atStartOfDay();
         LocalDateTime now = LocalDateTime.now();
-        boolean isMission = postRepository.findAllByUserIdAndCreatedAtBetween(user.getId(), startOfDay, now).isEmpty();
+        boolean isMission = postRepository.findAllByUserIdAndCreatedAtBetween(currentUser.getId(), startOfDay, now).isEmpty();
 
         // 3. Post 생성 및 저장
         Post post = Post.builder()
@@ -50,9 +51,11 @@ public class PostCommandServiceImpl implements PostCommandService {
                 .backImage(request.getBackImage())
                 .pointColor(request.getPointColor())
                 .visibility(request.getVisibility())
+                .user(currentUser)
                 .isMission(isMission)
-                .user(user)
+                .user(currentUser)
                 .build();
+
         postRepository.save(post);
 
         // 4. 해시태그 처리
@@ -71,17 +74,19 @@ public class PostCommandServiceImpl implements PostCommandService {
                         .post(post)
                         .itemTagX(itemTagDTO.getX())
                         .itemTagY(itemTagDTO.getY())
+                        .itemTagContent(itemTagDTO.getContent())
                         .tagType("FRONT")
                         .build())
                 .collect(Collectors.toList());
         itemTagRepository.saveAll(frontItemTags);
 
-        // 6. Back ItemTags 처리
+        // 5. Back ItemTags 처리
         List<ItemTag> backItemTags = request.getBackItemtags().stream()
                 .map(itemTagDTO -> ItemTag.builder()
                         .post(post)
                         .itemTagX(itemTagDTO.getX())
                         .itemTagY(itemTagDTO.getY())
+                        .itemTagContent(itemTagDTO.getContent())
                         .tagType("BACK")
                         .build())
                 .collect(Collectors.toList());
@@ -91,10 +96,10 @@ public class PostCommandServiceImpl implements PostCommandService {
     }
 
     @Override
-    public void updatePost(Long postId, PostRequestDTO.UpdatePostDTO request) {
+    public Post updatePost(Long postId, PostRequestDTO.UpdatePostDTO request) {
         // 1. 게시글 조회
         Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new GeneralException(ErrorStatus._NOT_FOUND));
+                .orElseThrow(() -> new GeneralException(ErrorStatus.POST_NOT_FOUND));
 
         // 2. 게시글 정보 업데이트
         post.setFrontImage(request.getFrontImage());
@@ -110,7 +115,7 @@ public class PostCommandServiceImpl implements PostCommandService {
                             .orElseGet(() -> hashtagRepository.save(Hashtag.builder().content(tagContent).build()));
                     return PostHashtag.builder().post(post).hashtag(hashTag).build();
                 })
-                .collect(Collectors.toList());
+                .toList();
         post.getPostHashtagList().addAll(newPostHashtags); // 새로운 태그 추가
 
         // 4. 기존 아이템 태그 삭제 후 새로운 태그 추가
@@ -121,23 +126,25 @@ public class PostCommandServiceImpl implements PostCommandService {
                         .post(post)
                         .itemTagX(itemTagDTO.getX())
                         .itemTagY(itemTagDTO.getY())
+                        .itemTagContent(itemTagDTO.getContent())
                         .tagType("FRONT")
                         .build())
-                .collect(Collectors.toList()));
+                .toList());
 
         newItemTags.addAll(request.getBackItemtags().stream()
                 .map(itemTagDTO -> ItemTag.builder()
                         .post(post)
                         .itemTagX(itemTagDTO.getX())
                         .itemTagY(itemTagDTO.getY())
+                        .itemTagContent(itemTagDTO.getContent())
                         .tagType("BACK")
                         .build())
-                .collect(Collectors.toList()));
+                .toList());
 
         post.getItemTagList().addAll(newItemTags);
 
         // 변경된 post 객체를 저장
-        postRepository.save(post);
+        return postRepository.save(post);
     }
 
     @Override
